ISS game results are shown in skat list (does not work correctly a.t.m.)